--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://http://13.235.128.157:9000/</sonar.host.url>
-		<sonar.login>squ_786f8852a40bb85d8ff153d3408fb73d2bec833f</sonar.login>
+		<sonar.host.url>http://13.235.24.247:9000</sonar.host.url>
+		<sonar.login>squ_4e094b9c7f875040a4a9dfaf8c4b455c4264bc8a</sonar.login>
 		
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
